@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added a rsync library and two new script:
+  + rsync-list-modules - list available rsync modules
+  + rsync-brute - attempts to brute force passwords against a rsync module
+  [Patrik]
+
 o Added --with-apr and --with-subversion configuration options to
   support systems where those libraries aren't in the usual places.
   [David]
